WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
152172
[WinCairo][MediaFoundation] Setting playback rate does not work.
https://bugs.webkit.org/show_bug.cgi?id=152172
Summary
[WinCairo][MediaFoundation] Setting playback rate does not work.
peavo
Reported
2015-12-11 06:47:05 PST
This needs to be implemented.
Attachments
Patch
(2.42 KB, patch)
2015-12-11 06:53 PST
,
peavo
bfulgham
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
peavo
Comment 1
2015-12-11 06:53:32 PST
Created
attachment 267169
[details]
Patch
Brent Fulgham
Comment 2
2015-12-11 08:45:53 PST
Comment on
attachment 267169
[details]
Patch r=me.
peavo
Comment 3
2015-12-11 09:39:35 PST
(In reply to
comment #2
)
> Comment on
attachment 267169
[details]
> Patch > > r=me.
Thanks!
peavo
Comment 4
2015-12-11 09:46:54 PST
Committed
r193959
: <
http://trac.webkit.org/changeset/193959
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug