[WinCairo][MediaFoundation] Setting playback rate does not work. https://bugs.webkit.org/show_bug.cgi?id=152172

Reviewed by Brent Fulgham.

Implement method to set playback rate.

* platform/graphics/win/MediaPlayerPrivateMediaFoundation.cpp:
(WebCore::MediaPlayerPrivateMediaFoundation::seekDouble):
(WebCore::MediaPlayerPrivateMediaFoundation::setRateDouble):
(WebCore::MediaPlayerPrivateMediaFoundation::durationDouble):
* platform/graphics/win/MediaPlayerPrivateMediaFoundation.h:


Canonical link: https://commits.webkit.org/170299@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@193959 268f45cc-cd09-0410-ab3c-d52691b4dbfc